--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div id="personNameAddress"></div>
     <div id="personWage"></div>
     <div id="personCert"></div>
+    <div id="Inf"></div>
+    
     <script src="./greeting.js"></script>
     
 </body>
